@@ -2,5 +2,6 @@ EBUILD cld-meta-10.0.1.ebuild 6370 RMD160 80c19cddfe54d83170739a3bb515d1ba019d53
 EBUILD cld-meta-10.0.ebuild 6079 RMD160 8e44b93588d4e3f5022cd014e344811ce87fdc90 SHA1 d202e06311f61936298e111626531e5e64739e87 SHA256 bd8a058ae43416a9a8999bbc87a518532c8c06c65a94a86e2e71cbe574cdec7b
 EBUILD cld-meta-10.2-r1.ebuild 6598 RMD160 70dff715c5ad301a7429b409d1e469db727e211c SHA1 3448abaf0b545a1be9942d54eed0094b1f0cb060 SHA256 6efafa5697474599da3c85ae496229b6d7f53f9b2abfd7e07b2a28d28504beb8
 EBUILD cld-meta-10.3.91.ebuild 6045 RMD160 30c7c43f510bc1df1e25c8c4491773dac375f264 SHA1 ff2e9fb197a81b2d78f74eae42fc24eee8045b3f SHA256 01dc0493f2fc153f54ca80e542a1467593d16f243db50b836de024e6a76044e8
-MISC ChangeLog 483 RMD160 e060090ef9a62f76f4c47922f8d376aa53882150 SHA1 1dceae7d40b7ec56b945bc10b268776bb2aa08e6 SHA256 db333acd953469df5d3ce6e002a4f47c6339f21d2766c87cc03bb9413f406bdd
+EBUILD cld-meta-10.4.ebuild 6372 RMD160 e7b363858c45e9ff85fb034417066ceb7636a3af SHA1 6ab972254f883f1d31e561e3b86277bd3f8ff2d8 SHA256 377ddba7d10312b4a879d7e85630eaa66a3fdc4d1c8e2e50f0b19754b1446319
+MISC ChangeLog 615 RMD160 aad8da50b4edf21c0fbdd5693112edd1f61d9df1 SHA1 f0e415daaff41c0efb0351c8d0d85904cad4e74f SHA256 1acf1b72575b9919d1dc76648f5baa9c2d17ce63b03f123d53073ec9085a7ab7
 MISC metadata.xml 261 RMD160 2aceeb761944d521f163c4b6069c36bc75b0ee1c SHA1 ef324fde01725a0c12d658e689002edffe695b6c SHA256 8bf4a47c7586811fc0bf26d75abbf0f4bc7bb6a9ed501b34622c4d822de83591
