@@ -2,5 +2,6 @@ EBUILD cls-meta-10.0.1.ebuild 2650 RMD160 b514be14898411234f7b20976be35d752cc96a
 EBUILD cls-meta-10.0.ebuild 2289 RMD160 5d477a405e631f25c13354247e2a43e8559612c9 SHA1 58b2d7f3dd9488a30a88c6df77c65cf559db8ec3 SHA256 c91ffb0b000c77dbd227f2e09c6d5b9cf60f96fc0712525f055a4092f78139de
 EBUILD cls-meta-10.2-r1.ebuild 2622 RMD160 f8bd10f912f0c8f5786d967ca66a96bb8fe20da2 SHA1 ac4837f6232b85a0f0af3b9065dc63efb4478757 SHA256 dbfcf319311527e03e2fce98f8b9f737dd48068071e9983edd811f8beed573f4
 EBUILD cls-meta-10.3.91.ebuild 2670 RMD160 2c4f21cc737906d06f28057ede2fedbe8aae187a SHA1 949421b126f9ac4118596d83f61b4f6ae82dc6fa SHA256 cf120880a7c547699909944d61a2cd2298004da34adf7d951cae5c994745c3e2
-MISC ChangeLog 477 RMD160 e641bca6375deae6cb635c57ff9e7e4faa472686 SHA1 dea5063fd5405613a30b107493d59946512f868e SHA256 22c4368e405de163498791eb37489b3fec01a52353db9f6ed877b7cf4c6b69f1
+EBUILD cls-meta-10.4.ebuild 3016 RMD160 70e493e2ca4b5a85d827d0e7c46cffa9b54661ed SHA1 d160331ac3a9d0f9cd2a5a106fd3d6e4accded41 SHA256 d69291ac0d805d330f7aa0c4b8e7dd7347c5327a980dc281e1a72854aa3958e1
+MISC ChangeLog 609 RMD160 6ffccec8fccd3cfc483eba72065e66594a3aab9a SHA1 25fd35e8fcd14411296bc35def4d0d8887ddc128 SHA256 369a62e81be0fa8cd5131eba4079685a1ebf380685af0e21c5085c2a79243f33
 MISC metadata.xml 257 RMD160 ba1d3308ea944e3f4e2d6c968edfc6abbc32261e SHA1 557e2138324d0aa8db3a282eeeadc88f5b061408 SHA256 6e5c9e82d9d3bdd7855fde47d4d5edaec61251e84a271bd08e64f17008d3e07a
